# educational_project

./: .flaskenv  .gitignore  config.py  main.py  pyproject.toml  tests.py
app/: __init__.py  cli.py  email.py  models.py  search.py  tasks.py  translate.py
app/api/: auth.py  errors.py  tokens.py  users.py
app/auth/: __init__.py  email.py  forms.py  routers.py
app/errors/: __init__.py  handlers.py
app/errors/templates/: 404.html  500.html
app/main/: __init__.py  forms.py  routers.py
app/templates/: _post.html  base.html  index.html  user.html  user_chat.html
app/templates/email/: export_posts.txt  reset_password.txt
app/translations/ru/LC_MESSAGES/: messages.mo  messages.po
migrations/versions/: 039bc8779b34_followers.py  3f23159c2e2e_user_tokens.py  74baf296ff2e_new_posts_table.py  8c60212cec91_private_messages.py  8e3ecb5ef918_tasks.py  94a582263e82_.py  9d76462513b2_notifications.py  bf6dcb3faf0b_.py  c11a9a836db5_.py  d6152b7b0bcb_added_new_user_model.py  d6a271402d54_.py  eb1c6110aeb5_language_in_posts.py
